--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>My First Parcel App</title>
     <link rel="stylesheet" href="css/styles.scss" />
     <script type="module" src="js/app.js"></script>
