--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>My First Parcel App</title>
     <link rel="stylesheet" href="css/styles.scss" />
     <script type="module" src="js/app.js"></script>
+    <script type="module" src="js/sum.js"></script>
   </head>
   <body>
     <h1>Hello, World!</h1>
