--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8" />
     <title>My First Parcel App</title>
     <link rel="stylesheet" href="css/styles.scss" />
-    <script type="module" src="js/App.js"></script>
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <nav id="navigation"></nav>
+    <div id="navigation"></div>
+    <script type="module" src="js/App.js"></script>
   </body>
 </html>
